--- a/KSAManagement/package.json
+++ b/KSAManagement/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.6",
     "bootstrap": "^5.3.3",
+    "bootstrap-datepicker": "^1.10.0",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
