--- a/KSAManagement/package.json
+++ b/KSAManagement/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^19.1.6",
     "bootstrap": "^5.3.3",
     "bootstrap-datepicker": "^1.10.0",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
