--- a/KSAManagement/package.json
+++ b/KSAManagement/package.json
@@ -7,12 +7,13 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:KSAManagement": "node dist/ksamanagement/server/server.mjs"
+    "serve:ssr:KSAManagement": "node dist/ksamanagement/server/server.mjs",
+    "postinstall": ""
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.5",
-    "@angular/cdk": "^19.1.3",
+    "@angular/cdk": "^19.2.16",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
