--- a/KSAManagement/package.json
+++ b/KSAManagement/package.json
@@ -29,6 +29,7 @@
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
